# isolens

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_mod.md  02_polya.md  03_file_format.md  04_mod_test.md  05_polya_test.md
rust/: Cargo.toml
rust/src/: main.rs
scripts/: asp_extract.py  bam_filter.py  mod_plot.py  mod_scan_verbose.py  polya_calc.py  polya_diff.py  polya_merge.py  polya_t2g.py  polya_wden_plot.py  pq2tsv.py  tsv2pq.py
src/isolens/: __init__.py  __main__.py  _cli_utils.py  _gtf.py  _hdf5_helpers.py  _io.py  _parsing.py  _stats.py  cli.py  main.py  mod_corr.py  mod_dmc.py  mod_dmcg.py  mod_dmt.py  mod_gene.py  mod_scan.py  mod_sites.py  polya_bimodal.py  polya_calc.py  polya_diff.py  polya_dpc.py  polya_dpt.py  polya_gene.py  polya_merge.py  polya_t2g.py  stats.py
src/lrkit/: __init__.py
tests/: test__stats.py  test_cli.py  test_isolens.py  test_lrkit.py  test_mod_corr.py  test_mod_dmc.py  test_mod_dmcg.py  test_mod_dmt.py  test_mod_gene.py  test_mod_scan.py  test_mod_sites.py  test_parsing.py  test_polya_bimodal.py  test_polya_calc.py  test_polya_diff.py  test_polya_dpc.py  test_polya_dpt.py  test_polya_gene.py  test_polya_merge.py  test_polya_t2g.py  test_stats.py
