[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isolens"
version = "0.6.1"
description = "Isoform-resolution epitranscriptome analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Hong Zhang" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
keywords = ["long-read", "bioinformatics", "sequencing", "genomics"]
dependencies = [
    "lz4>=4.0",
    "pysam>=0.22",
    "numpy>=1.24",
    "h5py>=3.8",
    "pyarrow>=24.0.0",
    "scipy>=1.15.3",
    "matplotlib>=3.10.9",
    "gppy>=0.1.5",
    "click>=8.4.2",
]

[project.scripts]
isolens = "isolens.cli:main"

[project.urls]
Homepage = "https://github.com/gxelab/isolens"
Repository = "https://github.com/gxelab/isolens"
"Bug Tracker" = "https://github.com/gxelab/isolens/issues"
Changelog = "https://github.com/gxelab/isolens/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/isolens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["isolens"]
branch = true

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
